crates/gox-tests/test_data/typecheck/40_interface_partial.gox
// Test partial interface implementation - missing one method
package main

type ReadWriter interface {
    Read() int
    Write(x int)
}

type PartialImpl struct {
    data int
}

func (p PartialImpl) Read() int {
    return p.data
}

// Missing Write method

func main() {
    var rw ReadWriter
    p := PartialImpl{data: 0}
    
    rw = p  // error: PartialImpl doesn't implement ReadWriter (missing Write)
    _ = rw
}

=== typecheck ===
E2601
